# rqotdd

./: .gitignore  Cargo.toml  Dockerfile  LICENSE_HEADER  Makefile  README.md  database.txt
.github/workflows/: build.yml
scripts/: macos-native-build.sh  musl-cross-build.sh  native-arch.sh  release.sh
src/: main.rs
